--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -12,10 +12,14 @@
         </svg>
     </label>
     <div class="ae-container-fluid rk-topbar">
-        <h1 class="rk-logo"><a routerLink="home">Marcelo's<sup>tm</sup></a></h1>
+        <h1 class="rk-logo">
+            <a routerLink="home">{{ _servicio.info.titulo}}<sup>tm</sup>
+            </a>
+        </h1>
         <nav class="rk-navigation">
             <ul class="rk-menu">
-                <li routerLinkActive="active" class="rk-menu__item"><a routerLink="home" class="rk-menu__link">Inicio</a>
+                <li routerLinkActive="active" class="rk-menu__item"><a routerLink="home"
+                        class="rk-menu__link">Inicio</a>
                 </li>
                 <li routerLinkActive="active" class="rk-menu__item"><a routerLink="about"
                         class="rk-menu__link">Nosotros</a></li>
