--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,12 @@
-/* You can add global styles to this file, and also import other style files */
+/*
+ Animacion del svg loading
+*/
+svg path,
+svg rect{
+  fill: black;
+}
 
+/*Animaciones de imganes cuando se cargan*/
 :root {
     --animate-duration: 1s;
     --animate-delay: 1s;
